--- a/tab-slider.liquid
+++ b/tab-slider.liquid
@@ -1,4 +1,3 @@
-
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"/>
 <style>
@@ -56,9 +55,10 @@
 </style>
 
 <ul class="tabs">
-  <li class="tab-link" data-tab="tab-1">Tab 1</li>
-  <li class="tab-link" data-tab="tab-2">Tab 2</li>
-  <li class="tab-link" data-tab="tab-3">Tab 3</li>
+   {%- for block in section.blocks -%}
+     {% assign custom-collection = block.settings.collection %}
+  <li class="tab-link" data-tab="{{ 'tab-' | append: forloop.index }}">{{ custom-collection.title }}</li>
+  {%- endfor %}
 </ul>
 
 <div id="tab-1" class="tab-content">
@@ -106,7 +106,9 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 <script>
-  $(document).ready(function(){
+ 
+  function slick_slider(){
+ 
     $(".tab-link").click(function(){
       var tab_id = $(this).attr("data-tab");
       
@@ -141,7 +143,13 @@
 
     // Show the first tab content by default
     $(".tab-link:first").click();
+  }
+  $(document).ready(function(){
+    slick_slider();
   });
+$(document).on("shopify:section:load", function () {
+    slick_slider();
+});
 </script>
 
 
@@ -149,6 +157,25 @@
   {
     "name": "tab-slider",
     "settings": [],
+    "blocks": [
+            {
+                "type": "tab",
+                "name": "tab",
+                "settings": [
+              {
+                "type":"text",
+                "id": "tab_title",
+                "label": "Title"
+              },
+              {
+                "type":"collection",
+                "id": "collection",
+                "label": "Collection"
+              }
+              
+        ]
+            }
+        ],
   "presets": [
     {
       "name": "tab-slider"
