--- a/tab-slider.liquid
+++ b/tab-slider.liquid
@@ -61,47 +61,18 @@
   {%- endfor %}
 </ul>
 
-<div id="tab-1" class="tab-content">
+{%- for block in section.blocks -%}
+<div id="{{ 'tab-' | append: forloop.index }}" class="tab-content">
   <div class="slider">
-    <div class="box">Box 1</div>
-    <div class="box">Box 2</div>
-    <div class="box">Box 3</div>
-    <div class="box">Box 4</div>
-    <div class="box">Box 5</div>
-    <div class="box">Box 6</div>
-    <div class="box">Box 7</div>
-    <div class="box">Box 8</div>
-    <div class="box">Box 9</div>
+    {% for product in block.settings.collection.products %}
+      <div class="box">
+        <h3>{{ product.title }}</h3>
+        <img src="{{ product.image.src | img_url: 'medium' }}" alt="{{ product.title }}">
+      </div>
+    {% endfor %}
   </div>
 </div>
-
-<div id="tab-2" class="tab-content">
-  <div class="slider">
-    <div class="box">Box 10</div>
-    <div class="box">Box 11</div>
-    <div class="box">Box 12</div>
-    <div class="box">Box 13</div>
-    <div class="box">Box 14</div>
-    <div class="box">Box 15</div>
-    <div class="box">Box 16</div>
-    <div class="box">Box 17</div>
-    <div class="box">Box 18</div>
-  </div>
-</div>
-
-<div id="tab-3" class="tab-content">
-  <div class="slider">
-    <div class="box">Box 19</div>
-    <div class="box">Box 20</div>
-    <div class="box">Box 21</div>
-    <div class="box">Box 22</div>
-    <div class="box">Box 23</div>
-    <div class="box">Box 24</div>
-    <div class="box">Box 25</div>
-    <div class="box">Box 26</div>
-    <div class="box">Box 27</div>
-  </div>
-</div>
+{%- endfor %}
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
